--- a/css/hospital.css
+++ b/css/hospital.css
@@ -201,7 +201,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url('/assets/hospital1.jpg');
+	background-image: url('https://nssk1999.github.io/covid19/assets/hospital1.jpg');
 	background-size: cover;
 	background-position: center;
 	position: relative;
