--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ p {
 
 /* Hero Section */
 #hero {
-  background-image: url(/assets/hospital1.jpg);
+  background-image: url(https://nssk1999.github.io/covid19/assets/hospital.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
