--- a/css/hospital.css
+++ b/css/hospital.css
@@ -201,11 +201,11 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url("../assets/hospital1.jpg");
+	background-image: url('../assets/hospital1.jpg');
 	background-size: cover;
 	background-position: center;
 	position: relative;
-	z-index: -1;
+	z-index: 1;
 }
 #hero::after {
 	content: '';
